Revert "fixed color-contrast dropdown"
This reverts commit 0ce5a5516013d8ef4b87cb8661e9413fa252221e.

--- a/inc/boldgrid-theme-framework-config/scss/palette-formats.scss
+++ b/inc/boldgrid-theme-framework-config/scss/palette-formats.scss
@@ -210,8 +210,7 @@
                 }
             }
             li > a {
-                	background: $palette-primary_1;
-                    color: $text-contrast-palette-primary_1;
+                color: $text-contrast-palette-primary_1;
                 &:hover, &:focus {
                     background: $palette-primary_2;
                     color: $text-contrast-palette-primary_2;
