--- a/style.css
+++ b/style.css
@@ -287,9 +287,6 @@ hr:after {
 .navbar-default {
 	margin-bottom: 0;
 }
-ul.dropdown-menu{
-	text-align: center;
-}
 
 /* Hover */
 .navbar-default .navbar-nav > li > a:hover,
@@ -312,9 +309,6 @@ ul.dropdown-menu{
 	.navbar-default .navbar-nav > li:last-child > a {
 		padding-right: 0;
 	}
-	ul.dropdown-menu {
-		text-align: left;
-}
 }
 
 /*-----------------------------------------------
